--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pages Title</title>
+    <title>Learning Docs</title>
 </head>
 <body>
-    <h1>Some documentation</h1>
+    <h1>Topics</h1>
 </body>
 </html>
